# ariadne-apollo-graphql-test

./: README.md
graphql-ws-test/: log.json  main.py  message_subscriptions.py  pyproject.toml
graphql-ws-test-react-client/: package-lock.json  package.json
graphql-ws-test-react-client/src/: App.js  Queries.js  apolloConfig.js  index.js
