[tool.poetry]
name = "graphql-ws-test"
version = "0.1.0"
description = ""
authors = ["fdemian <email@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ariadne = "^0.16.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
websockets = "^10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
